--- a/android/Sara/app/src/main/res/values/themes.xml
+++ b/android/Sara/app/src/main/res/values/themes.xml
@@ -1,16 +1,42 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Sara" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Sara" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/sara_blue</item>
+        <item name="colorPrimaryVariant">@color/sara_blue</item>
         <item name="colorOnPrimary">@color/white</item>
+        <item name="android:textColorPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/sara_blue</item>
+        <item name="colorSecondaryVariant">@color/sara_blue</item>
+        <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@color/white</item>
+        <item name="android:windowLightStatusBar">true</item>
         <!-- Customize your theme here. -->
+        <item name="android:letterSpacing">-0.015</item>
+    </style>
+
+    <style name="SaraButtonStylePrimary" parent="Widget.MaterialComponents.Button">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:backgroundTint">@color/sara_blue</item>
+        <item name="cornerRadius">@dimen/corner_radius</item>
+        <item name="android:outlineProvider">none</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:minHeight">0dp</item>
+        <item name="android:minWidth">0dp</item>
+        <item name="rippleColor">@color/sara_gray_transparent</item>
+    </style>
+    <style name="SaraButtonStyleSecond" parent="Widget.MaterialComponents.Button">
+        <item name="android:textColor">@color/sara_gray</item>
+        <item name="android:backgroundTint">@color/sara_lightGray</item>
+        <item name="cornerRadius">@dimen/corner_radius</item>
+        <item name="android:outlineProvider">none</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:minHeight">0dp</item>
+        <item name="android:minWidth">0dp</item>
+        <item name="rippleColor">@color/sara_gray_transparent</item>
     </style>
 </resources>
