--- a/android/Sara/app/src/main/res/layout/fragment_home.xml
+++ b/android/Sara/app/src/main/res/layout/fragment_home.xml
@@ -1,16 +1,148 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.home.HomeFragment">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
+    <data>
+        <variable
+            name="num"
+            type="int" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="home"
-        tools:layout_editor_absoluteX="-126dp"
-        tools:layout_editor_absoluteY="352dp" />
+        tools:context=".ui.home.HomeFragment">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fillViewport="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/top_bar_height"
+                    android:padding="@dimen/default_margin"
+                    android:scaleType="fitStart"
+                    android:src="@drawable/ic_logo" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="76dp"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/textView3"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                PrefixRandomText="@{num}"
+                                android:textAlignment="textEnd"
+                                android:textColor="@color/sara_blue"
+                                android:textSize="@dimen/text_title_size"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:id="@+id/textView4"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                SuffixRandomText="@{num}"
+                                android:textColor="@color/sara_blue"
+                                android:textSize="@dimen/text_title_size" />
+                        </LinearLayout>
+
+                        <ImageView
+                            android:id="@+id/imageView5"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/default_margin"
+                            android:src="@drawable/ic_bubble_type2" />
+
+                        <ImageView
+                            android:id="@+id/imageView6"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/default_margin"
+                            android:src="@drawable/ic_sara_normal" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="32dp"
+                            android:orientation="horizontal">
+
+                            <Button
+                                android:id="@+id/btn_upload"
+                                style="@style/SaraButtonStylePrimary"
+                                android:layout_width="match_parent"
+                                android:layout_height="88dp"
+                                android:layout_marginStart="@dimen/default_margin"
+                                android:layout_marginEnd="4dp"
+                                android:layout_weight="1"
+                                android:text="@string/text_button_upload"
+                                android:textSize="@dimen/text_button_size"
+                                android:textStyle="bold"
+                                app:cornerRadius="@dimen/corner_radius_2"
+                                app:icon="@drawable/ic_upload"
+                                app:iconGravity="textStart" />
+
+                            <Button
+                                android:id="@+id/btn_search"
+                                style="@style/SaraButtonStyleSecond"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_marginStart="4dp"
+                                android:layout_marginEnd="@dimen/default_margin"
+                                android:layout_weight="1"
+                                android:text="@string/text_button_search"
+                                android:textColor="@color/black"
+                                android:textSize="@dimen/text_button_size"
+                                android:textStyle="bold"
+                                app:cornerRadius="@dimen/corner_radius_2"
+                                app:icon="@drawable/ic_search"
+                                app:iconGravity="textStart"
+                                app:iconTint="@color/black" />
+                        </LinearLayout>
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1" />
+
+                        <Button
+                            android:id="@+id/btn_survey"
+                            style="@style/SaraButtonStyleSecond"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/default_margin"
+                            android:layout_marginEnd="@dimen/default_margin"
+                            android:layout_marginBottom="@dimen/default_margin"
+                            android:drawableLeft="@drawable/ic_survey"
+                            android:padding="@dimen/default_margin"
+                            android:text="@string/text_survey_desc"
+                            android:textAlignment="textStart"
+                            android:textColor="@color/sara_gray"
+                            android:textSize="14sp"
+                            app:iconPadding="@dimen/default_margin" />
+                    </LinearLayout>
+            </LinearLayout>
+        </ScrollView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
