--- a/android/Sara/app/src/main/res/navigation/nav_graph_main.xml
+++ b/android/Sara/app/src/main/res/navigation/nav_graph_main.xml
@@ -27,7 +27,11 @@
         android:id="@+id/homeFragment"
         android:name="com.xten.sara.ui.home.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_imageUploadFragment"
+            app:destination="@id/imageUploadFragment" />
+    </fragment>
     <fragment
         android:id="@+id/galleryFragment"
         android:name="com.xten.sara.ui.gallery.GalleryFragment"
@@ -38,4 +42,23 @@
         android:name="com.xten.sara.ui.my.MyFragment"
         android:label="fragment_my"
         tools:layout="@layout/fragment_my" />
+    <fragment
+        android:id="@+id/imageUploadFragment"
+        android:name="com.xten.sara.ui.home.ImageUploadFragment"
+        android:label="ImageUploadFragment" >
+        <action
+            android:id="@+id/action_imageUploadFragment_to_imageResultFragment"
+            app:destination="@id/imageResultFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/imageResultFragment"
+        android:name="com.xten.sara.ui.home.ImageResultFragment"
+        android:label="fragment_image_result"
+        tools:layout="@layout/fragment_image_result" >
+        <action
+            android:id="@+id/action_imageResultFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
 </navigation>
