--- a/android/Sara/app/src/main/res/values/dimens.xml
+++ b/android/Sara/app/src/main/res/values/dimens.xml
@@ -1,12 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="default_margin">16dp</dimen>
+    <dimen name="content_margin">24dp</dimen>
     <dimen name="gap_margin">8dp</dimen>
 
     <dimen name="bottom_nav_height">88dp</dimen>
     <dimen name="bottom_nav_elevation">10dp</dimen>
 
+    <dimen name="status_bar_height">24dp</dimen>
     <dimen name="top_bar_height">56dp</dimen>
 
-    <dimen name="corner_radius">16dp</dimen>
+    <dimen name="corner_radius">12dp</dimen>
+    <dimen name="corner_radius_2">16dp</dimen>
+    <dimen name="corner_radius_3">8dp</dimen>
+    <dimen name="corner_radius_4">24dp</dimen>
+
+    <dimen name="text_title_size">24sp</dimen>
+    <dimen name="text_button_size">16sp</dimen>
+
+    <dimen name="text_top_title_size">20sp</dimen>
+
+    <dimen name="text_content_small_size">12sp</dimen>
+    <dimen name="text_content_title_size">26sp</dimen>
+
+    <dimen name="basic_button_height">51dp</dimen>
+
 </resources>
