--- a/android/Sara/app/src/main/res/values/themes.xml
+++ b/android/Sara/app/src/main/res/values/themes.xml
@@ -15,10 +15,13 @@
         <item name="android:windowLightStatusBar">true</item>
         <!-- Customize your theme here. -->
         <item name="android:letterSpacing">-0.015</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="SaraButtonStylePrimary" parent="Widget.MaterialComponents.Button">
         <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/text_button_size</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:backgroundTint">@color/sara_blue</item>
         <item name="cornerRadius">@dimen/corner_radius</item>
         <item name="android:outlineProvider">none</item>
@@ -29,7 +32,9 @@
         <item name="rippleColor">@color/sara_gray_transparent</item>
     </style>
     <style name="SaraButtonStyleSecond" parent="Widget.MaterialComponents.Button">
-        <item name="android:textColor">@color/sara_gray</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/text_button_size</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:backgroundTint">@color/sara_lightGray</item>
         <item name="cornerRadius">@dimen/corner_radius</item>
         <item name="android:outlineProvider">none</item>
