--- a/android/Sara/app/src/main/res/values/dimens.xml
+++ b/android/Sara/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="default_margin">16dp</dimen>
     <dimen name="content_margin">24dp</dimen>
+    <dimen name="wide_margin">48dp</dimen>
     <dimen name="gap_margin">8dp</dimen>
 
     <dimen name="bottom_nav_height">88dp</dimen>
@@ -10,6 +11,9 @@
     <dimen name="status_bar_height">24dp</dimen>
     <dimen name="top_bar_height">56dp</dimen>
 
+    <dimen name="logo_width">135dp</dimen>
+    <dimen name="logo_height">50dp</dimen>
+
     <dimen name="corner_radius">12dp</dimen>
     <dimen name="corner_radius_2">16dp</dimen>
     <dimen name="corner_radius_3">8dp</dimen>
@@ -17,6 +21,7 @@
 
     <dimen name="text_title_size">24sp</dimen>
     <dimen name="text_button_size">16sp</dimen>
+    <dimen name="text_button_medium_size">18sp</dimen>
 
     <dimen name="text_top_title_size">20sp</dimen>
 
@@ -24,5 +29,7 @@
     <dimen name="text_content_title_size">26sp</dimen>
 
     <dimen name="basic_button_height">51dp</dimen>
+
+    <dimen name="stroke_width">1dp</dimen>
 
 </resources>
