[HOME] 이미지 업로드+분석 기능 완성
+)
1. login쪽 자동로그인 문제 디버그
2. image Tagging api 삭제

후에 디버깅 해야 할 것 : 화면 벗어났을 때 요청 취소작업

--- a/android/Sara/app/src/main/res/navigation/nav_graph_main.xml
+++ b/android/Sara/app/src/main/res/navigation/nav_graph_main.xml
@@ -39,6 +39,9 @@
         <action
             android:id="@+id/action_homeFragment_to_imageUploadFragment"
             app:destination="@id/imageUploadFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_imageResultFragment"
+            app:destination="@id/imageResultFragment" />
     </fragment>
     <fragment
         android:id="@+id/galleryFragment"
