--- a/android/Sara/app/src/main/res/values/dimens.xml
+++ b/android/Sara/app/src/main/res/values/dimens.xml
@@ -4,6 +4,8 @@
     <dimen name="content_margin">24dp</dimen>
     <dimen name="wide_margin">48dp</dimen>
     <dimen name="gap_margin">8dp</dimen>
+    <dimen name="gap_wide_margin">32dp</dimen>
+    <dimen name="gap_medium_margin">22dp</dimen>
 
     <dimen name="bottom_nav_height">88dp</dimen>
     <dimen name="bottom_nav_elevation">10dp</dimen>
@@ -20,6 +22,7 @@
     <dimen name="corner_radius_4">24dp</dimen>
 
     <dimen name="text_title_size">24sp</dimen>
+    <dimen name="text_title_big_size">28sp</dimen>
     <dimen name="text_button_size">16sp</dimen>
     <dimen name="text_button_medium_size">18sp</dimen>
 
