--- a/android/Sara/app/src/main/res/layout/fragment_image_result.xml
+++ b/android/Sara/app/src/main/res/layout/fragment_image_result.xml
@@ -96,7 +96,7 @@
                             android:layout_marginTop="@dimen/content_margin"
                             android:layout_marginEnd="@dimen/default_margin"
                             android:layout_marginBottom="@dimen/content_margin"
-                            android:text="TextView"
+                            android:text="@{viewModel.resultAnalysis.text}"
                             android:textColor="@color/sara_gray" />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
@@ -128,6 +128,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/basic_button_height"
                         android:layout_marginEnd="4dp"
+                        android:layout_marginBottom="@dimen/default_margin"
                         android:layout_weight="1"
                         android:text="@string/text_button_recall"
                         app:icon="@drawable/ic_recall"
@@ -140,6 +141,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/basic_button_height"
                         android:layout_marginStart="4dp"
+                        android:layout_marginBottom="@dimen/default_margin"
                         android:layout_weight="1"
                         android:text="@string/text_button_share"
                         app:icon="@drawable/ic_share"
@@ -151,10 +153,12 @@
         </ScrollView>
 
         <include
+            android:id="@+id/progress_view"
             layout="@layout/view_progress"
-            bind:viewModel="@{viewModel}"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            bind:viewModel="@{viewModel}" />
 
     </FrameLayout>
 </layout>
