--- a/android/Sara/app/src/main/res/layout/view_progress.xml
+++ b/android/Sara/app/src/main/res/layout/view_progress.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -7,13 +8,15 @@
             name="viewModel"
             type="com.xten.sara.ui.home.ImageUploadViewModel" />
         <import type="android.view.View"/>
+        <import type="com.xten.sara.util.State"/>
     </data>
 
     <androidx.constraintlayout.motion.widget.MotionLayout
-        android:visibility="@{viewModel.state? View.GONE : View.VISIBLE}"
-        android:layout_width="match_parent"
+        android:id="@+id/motionLayout"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:background="@color/white"
+        android:visibility="@{viewModel.state == State.SUCCESS? View.GONE : View.VISIBLE}"
         app:layoutDescription="@xml/view_progress_scene">
 
         <View
@@ -27,13 +30,63 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/top_bar_height"
+            android:layout_marginStart="@dimen/default_margin"
+            android:layout_marginTop="@dimen/status_bar_height"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_logo" />
+
+        <ImageView
+            android:id="@+id/imageView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/gap_medium_margin"
+            app:layout_constraintBottom_toTopOf="@+id/sara"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/ic_bubble_type3" />
+
+        <TextView
+            android:id="@+id/tv_progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/gap_wide_margin"
+            android:text="Sara를 열심히 굴리는중"
+            android:textColor="@color/sara_blue"
+            android:textSize="@dimen/text_title_big_size"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/imageView7"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <ImageView
             android:id="@+id/sara"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:rotation="180"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.55"
             app:srcCompat="@drawable/ic_sara_normal" />
+
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/gap_wide_margin"
+            android:background="@drawable/bg_round_small_card"
+            android:padding="@dimen/gap_margin"
+            android:text="@string/text_progress_warning"
+            android:textAlignment="center"
+            android:textColor="@color/sara_blue"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/sara" />
+
     </androidx.constraintlayout.motion.widget.MotionLayout>
 </layout>
