--- a/android/Sara/app/src/main/res/navigation/nav_graph_main.xml
+++ b/android/Sara/app/src/main/res/navigation/nav_graph_main.xml
@@ -47,7 +47,11 @@
         android:id="@+id/galleryFragment"
         android:name="com.xten.sara.ui.gallery.GalleryFragment"
         android:label="fragment_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        tools:layout="@layout/fragment_gallery" >
+        <action
+            android:id="@+id/action_galleryFragment_to_galleryDetailsFragment"
+            app:destination="@id/galleryDetailsFragment" />
+    </fragment>
     <fragment
         android:id="@+id/myFragment"
         android:name="com.xten.sara.ui.my.MyFragment"
@@ -73,5 +77,16 @@
             app:destination="@id/homeFragment"
             app:popUpTo="@id/homeFragment"
             app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/galleryDetailsFragment"
+        android:name="com.xten.sara.ui.gallery.GalleryDetailsFragment"
+        android:label="fragment_gallery_details"
+        tools:layout="@layout/fragment_gallery_details" >
+        <argument
+            android:name="gallery"
+            app:argType="com.xten.sara.data.Gallery"
+            app:nullable="true"
+            android:defaultValue="@null" />
     </fragment>
 </navigation>
