--- a/android/Sara/app/src/main/res/values/dimens.xml
+++ b/android/Sara/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="gap_margin">8dp</dimen>
     <dimen name="gap_wide_margin">32dp</dimen>
     <dimen name="gap_medium_margin">22dp</dimen>
+    <dimen name="gap_minus_margin">12dp</dimen>
 
     <dimen name="bottom_nav_height">88dp</dimen>
     <dimen name="bottom_nav_elevation">10dp</dimen>
@@ -21,6 +22,7 @@
     <dimen name="corner_radius_3">8dp</dimen>
     <dimen name="corner_radius_4">24dp</dimen>
 
+    <dimen name="text_menu_title_size">26sp</dimen>
     <dimen name="text_title_size">24sp</dimen>
     <dimen name="text_title_big_size">28sp</dimen>
     <dimen name="text_button_size">16sp</dimen>
@@ -34,5 +36,9 @@
     <dimen name="basic_button_height">51dp</dimen>
 
     <dimen name="stroke_width">1dp</dimen>
+
+    <dimen name="item_card_height">182dp</dimen>
+
+    <dimen name="top_elevation">1dp</dimen>
 
 </resources>
