--- a/android/Sara/app/src/main/res/layout/fragment_my.xml
+++ b/android/Sara/app/src/main/res/layout/fragment_my.xml
@@ -1,14 +1,187 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.my.MyFragment">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <data>
+        <variable
+            name="account"
+            type="com.google.android.gms.auth.api.signin.GoogleSignInAccount" />
+        <variable
+            name="fragent"
+            type="com.xten.sara.ui.my.MyFragment" />
+    </data>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="my" />
+        android:orientation="vertical"
+        tools:context=".ui.my.MyFragment">
 
-</FrameLayout>
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/top_bar_height"
+            android:gravity="center_vertical"
+            android:paddingStart="@dimen/default_margin"
+            android:text="@string/menu_my_name_title"
+            android:textSize="@dimen/text_menu_title_size"
+            android:textStyle="bold" />
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fillViewport="true">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/default_margin"
+                    android:layout_marginTop="@dimen/gap_margin"
+                    android:layout_marginEnd="@dimen/default_margin"
+                    android:orientation="horizontal">
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="@dimen/profile_height"
+                        android:layout_height="@dimen/profile_height"
+                        app:cardCornerRadius="50dp"
+                        app:cardElevation="0dp"
+                        app:cardMaxElevation="0dp">
+
+                        <ImageView
+                            android:id="@+id/imageView8"
+                            ImageLoad="@{account.photoUrl.toString()}"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:elevation="0dp"
+                            tools:src="@tools:sample/avatars" />
+                    </androidx.cardview.widget.CardView>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginStart="@dimen/default_margin"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/textView12"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:singleLine="true"
+                            android:text="@{account.displayName}"
+                            android:textSize="@dimen/text_title_size"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/textView13"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@{account.email}"
+                            android:textColor="@color/sara_gray" />
+                    </LinearLayout>
+                </LinearLayout>
+
+                <Button
+                    android:id="@+id/btn_collection"
+                    style="@style/SaraButtonStyleSecond"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/list_button_height"
+                    android:layout_marginStart="@dimen/default_margin"
+                    android:layout_marginTop="@dimen/gap_wide_margin"
+                    android:layout_marginEnd="@dimen/default_margin"
+                    android:onClick="@{()->fragent.setCollectionButtonAction(account.email)}"
+                    android:text="@string/text_menu_collection"
+                    android:textAlignment="viewStart"
+                    android:textSize="@dimen/text_button_medium_size" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/list_button_height"
+                    android:layout_marginStart="@dimen/default_margin"
+                    android:layout_marginTop="@dimen/gap_margin"
+                    android:layout_marginEnd="@dimen/default_margin"
+                    android:background="@drawable/bg_round_card"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/imageView9"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="@dimen/default_margin"
+                        android:src="@drawable/ic_check" />
+
+                    <TextView
+                        android:id="@+id/textView15"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="@dimen/gap_margin"
+                        android:layout_weight="1"
+                        android:text="@string/text_text_ver"
+                        android:textSize="@dimen/text_button_medium_size"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/textView16"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginEnd="@dimen/default_margin"
+                        android:layout_weight="1"
+                        android:text="@string/text_text_ver_desc"
+                        android:textAlignment="viewEnd"
+                        android:textColor="@color/sara_gray" />
+                </LinearLayout>
+
+                <Button
+                    android:id="@+id/btn_survey"
+                    style="@style/SaraButtonStyleSecond"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/list_button_height"
+                    android:layout_marginStart="@dimen/default_margin"
+                    android:layout_marginTop="@dimen/gap_margin"
+                    android:layout_marginEnd="@dimen/default_margin"
+                    android:text="@string/text_menu_survey"
+                    android:textAlignment="viewStart"
+                    android:textSize="@dimen/text_button_medium_size"
+                    android:onClick="@{()->fragent.setSurveyButtonAction()}"
+                    app:icon="@drawable/ic_survay_menu"
+                    app:iconTint="@color/black" />
+
+                <Button
+                    android:id="@+id/btn_logout"
+                    style="@style/SaraButtonStyleSecond"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/list_button_height"
+                    android:layout_marginStart="@dimen/default_margin"
+                    android:layout_marginTop="@dimen/gap_margin"
+                    android:layout_marginEnd="@dimen/default_margin"
+                    android:text="@string/text_button_logout"
+                    android:textAlignment="viewStart"
+                    android:textSize="@dimen/text_button_medium_size"
+                    app:icon="@drawable/ic_logout"
+                    android:onClick="@{()->fragent.setLogoutButtonAction()}"
+                    app:iconTint="@color/black" />
+
+                <TextView
+                    android:id="@+id/textView14"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/default_margin"
+                    android:layout_weight="1"
+                    android:gravity="bottom|center"
+                    android:text="@string/sara_copyright"
+                    android:textColor="@color/sara_gray_copy"
+                    android:textSize="@dimen/text_content_small_size" />
+
+            </LinearLayout>
+        </ScrollView>
+    </LinearLayout>
+</layout>
