[디버그] LOGIN, HOME 1차 디버깅
키보드 관련해서 이슈 남았음

--- a/android/Sara/app/src/main/res/layout/fragment_image_upload.xml
+++ b/android/Sara/app/src/main/res/layout/fragment_image_upload.xml
@@ -10,6 +10,7 @@
         <variable
             name="fragment"
             type="com.xten.sara.ui.home.ImageUploadFragment" />
+        <import type="android.view.View"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -69,23 +70,13 @@
                     <ImageView
                         android:id="@+id/image"
                         Image="@{viewModel.imageUri}"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center"
                         android:background="?attr/selectableItemBackground"
                         android:scaleType="center"
                         tools:srcCompat="@drawable/ic_launcher_background" />
                 </androidx.cardview.widget.CardView>
-
-                <TextView
-                    android:id="@+id/textView2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/default_margin"
-                    android:layout_marginTop="@dimen/default_margin"
-                    android:layout_marginEnd="@dimen/default_margin"
-                    android:text="@string/text_upload_desc"
-                    android:textColor="@color/sara_red"
-                    android:textSize="@dimen/text_content_small_size" />
 
                 <RadioGroup
                     android:id="@+id/radio_group"
@@ -101,17 +92,18 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="@dimen/gap_margin"
                         android:background="@drawable/bg_round_small_card"
+                        android:backgroundTint="@color/chip_bg_color"
+                        android:textColor="@color/chip_text_color"
                         android:button="@null"
                         android:checked="true"
                         android:gravity="center"
                         android:includeFontPadding="true"
                         android:minWidth="0dp"
                         android:minHeight="0dp"
+                        android:onClick="@{()->fragment.activeRadioButton(1)}"
                         android:padding="@dimen/gap_margin"
                         android:text="@string/title_chip1"
-                        android:textStyle="bold"
-                        android:onClick="@{()->fragment.activeRadioButton(0)}"
-                        ChipColorState="@{fragment.chipState}" />
+                        android:textStyle="bold" />
 
                     <RadioButton
                         android:id="@+id/radio_2"
@@ -119,6 +111,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="@dimen/gap_margin"
                         android:background="@drawable/bg_round_small_card"
+                        android:backgroundTint="@color/chip_bg_color"
+                        android:textColor="@color/chip_text_color"
                         android:button="@null"
                         android:gravity="center"
                         android:minWidth="0dp"
@@ -126,14 +120,15 @@
                         android:padding="@dimen/gap_margin"
                         android:text="@string/title_chip2"
                         android:textStyle="bold"
-                        android:onClick="@{()->fragment.activeRadioButton(1)}"
-                        ChipColorState="@{fragment.chipState}" />
+                        android:onClick="@{()->fragment.activeRadioButton(2)}" />
 
                     <RadioButton
                         android:id="@+id/radio_3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@drawable/bg_round_small_card"
+                        android:backgroundTint="@color/chip_bg_color"
+                        android:textColor="@color/chip_text_color"
                         android:button="@null"
                         android:gravity="center"
                         android:minWidth="0dp"
@@ -141,19 +136,45 @@
                         android:padding="@dimen/gap_margin"
                         android:text="@string/title_chip3"
                         android:textStyle="bold"
-                        android:onClick="@{()->fragment.activeRadioButton(2)}"
-                        ChipColorState="@{fragment.chipState}" />
+                        android:onClick="@{()->fragment.activeRadioButton(3)}" />
+
+                    <RadioButton
+                        android:id="@+id/radio_4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/gap_margin"
+                        android:background="@drawable/bg_round_small_card"
+                        android:backgroundTint="@color/chip_bg_color"
+                        android:button="@null"
+                        android:drawableLeft="@drawable/ic_text"
+                        android:drawablePadding="@dimen/gap_margin"
+                        android:drawableTint="@color/chip_text_color"
+                        android:gravity="center"
+                        android:minWidth="0dp"
+                        android:minHeight="0dp"
+                        android:onClick="@{()->fragment.activeRadioButton(4)}"
+                        android:padding="@dimen/gap_margin"
+                        android:text="@string/title_chip4"
+                        android:textColor="@color/chip_text_color"
+                        android:textStyle="bold" />
+
                 </RadioGroup>
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/default_margin"
+                    android:layout_marginTop="@dimen/gap_margin"
+                    android:layout_marginEnd="@dimen/default_margin"
+                    android:animateLayoutChanges="true" >
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/text_field"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginStart="@dimen/default_margin"
-                    android:layout_marginTop="@dimen/gap_margin"
-                    android:layout_marginEnd="@dimen/default_margin"
-                    app:boxBackgroundColor="@{fragment.chipState? @color/sara_unable : @color/sara_lightGray}"
+                    android:visibility="gone"
+                    app:boxBackgroundColor="@color/sara_lightGray"
                     app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
                     app:boxCornerRadiusBottomStart="@dimen/corner_radius"
                     app:boxCornerRadiusTopEnd="@dimen/corner_radius"
@@ -174,8 +195,9 @@
                         android:inputType="textMultiLine"
                         android:maxLength="30"
                         android:text="@={viewModel.freeText}"
-                        android:textColor="@{fragment.chipState? @color/sara_gray : @color/black}" />
+                        android:textColor="@color/sara_gray" />
                 </com.google.android.material.textfield.TextInputLayout>
+                </FrameLayout>
 
                 <Button
                     android:id="@+id/btn_request"
