--- a/android/Sara/app/src/main/res/layout/fragment_image_result.xml
+++ b/android/Sara/app/src/main/res/layout/fragment_image_result.xml
@@ -15,42 +15,49 @@
         android:layout_height="match_parent"
         tools:context=".ui.home.ImageResultFragment">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/top_bar_height"
+                android:layout_marginTop="@dimen/status_bar_height"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/btn_back"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="@dimen/default_margin"
+                    android:src="@drawable/ic_arrow" />
+
+                <TextView
+                    android:id="@+id/textView5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="@dimen/gap_margin"
+                    android:layout_marginEnd="@dimen/default_margin"
+                    android:layout_weight="1"
+                    android:text="@string/text_title_result"
+                    android:textSize="@dimen/text_top_title_size"
+                    android:textStyle="bold" />
+            </LinearLayout>
+        </LinearLayout>
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/status_bar_height"
+            android:layout_marginTop="80dp"
             android:fillViewport="true">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/top_bar_height"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/btn_back"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginStart="@dimen/default_margin"
-                        android:src="@drawable/ic_arrow" />
-
-                    <TextView
-                        android:id="@+id/textView5"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginStart="@dimen/gap_margin"
-                        android:layout_marginEnd="@dimen/default_margin"
-                        android:layout_weight="1"
-                        android:text="@string/text_title_result"
-                        android:textSize="@dimen/text_top_title_size"
-                        android:textStyle="bold" />
-                </LinearLayout>
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
@@ -101,13 +108,52 @@
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/default_margin"
+                    android:layout_marginTop="@dimen/default_margin"
+                    android:layout_marginEnd="@dimen/default_margin"
+                    android:layout_marginBottom="@dimen/gap_margin"
+                    android:animateLayoutChanges="true">
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/text_field"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:visibility="gone"
+                        app:boxBackgroundColor="@color/sara_lightGray"
+                        app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
+                        app:boxCornerRadiusBottomStart="@dimen/corner_radius"
+                        app:boxCornerRadiusTopEnd="@dimen/corner_radius"
+                        app:boxCornerRadiusTopStart="@dimen/corner_radius"
+                        app:boxStrokeColor="@color/text_field_stroke_color"
+                        app:counterEnabled="true"
+                        app:counterMaxLength="30"
+                        app:endIconMode="clear_text"
+                        app:errorEnabled="true"
+                        app:errorIconTint="@color/sara_red">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/edit_request"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/text_save_hint"
+                            android:imeOptions="actionGo"
+                            android:inputType="textMultiLine"
+                            android:maxLength="30"
+                            android:text="@={viewModel.freeText}"
+                            android:textColor="@color/sara_gray" />
+                    </com.google.android.material.textfield.TextInputLayout>
+                </FrameLayout>
+
                 <Button
                     android:id="@+id/btn_save"
                     style="@style/SaraButtonStylePrimary"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/default_margin"
-                    android:layout_marginTop="@dimen/default_margin"
                     android:layout_marginEnd="@dimen/default_margin"
                     android:height="@dimen/basic_button_height"
                     android:text="컬렉션에 저장하기"
