--- a/android/Sara/app/src/main/res/navigation/nav_graph_main.xml
+++ b/android/Sara/app/src/main/res/navigation/nav_graph_main.xml
@@ -75,6 +75,9 @@
             app:destination="@id/imageResultFragment"
             app:popUpTo="@id/imageResultFragment"
             app:popUpToInclusive="true" />
+        <argument
+            android:name="imageUri"
+            app:argType="android.net.Uri" />
     </fragment>
     <fragment
         android:id="@+id/imageResultFragment"
