--- a/android/Sara/app/src/main/res/layout/fragment_gallery_details.xml
+++ b/android/Sara/app/src/main/res/layout/fragment_gallery_details.xml
@@ -43,7 +43,7 @@
                 android:elevation="@dimen/top_elevation"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:text="@{gallery.text}"
+                android:text="@{gallery.title}"
                 android:textSize="@dimen/text_top_title_size"
                 android:textStyle="bold" />
         </LinearLayout>
@@ -58,16 +58,54 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical" >
 
-                <TextView
-                    android:id="@+id/textView9"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="end"
                     android:layout_marginStart="@dimen/default_margin"
+                    android:layout_marginTop="@dimen/gap_margin"
                     android:layout_marginEnd="@dimen/default_margin"
-                    android:text="@{gallery.email}"
-                    android:textAlignment="viewEnd"
-                    android:textColor="@color/sara_gray" />
+                    android:orientation="horizontal">
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="@dimen/profile_mini_height"
+                        android:layout_height="@dimen/profile_mini_height"
+                        app:cardBackgroundColor="@color/sara_lightGray"
+                        app:cardCornerRadius="50dp"
+                        app:cardElevation="0dp"
+                        app:cardMaxElevation="0dp">
+
+                        <ImageView
+                            android:id="@+id/imageView8"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:elevation="0dp"
+                            tools:src="@tools:sample/avatars" />
+                    </androidx.cardview.widget.CardView>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginStart="@dimen/default_margin"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/textView12"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:singleLine="true"
+                            android:text="@{gallery.nickname}"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/textView13"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@{gallery.email}"
+                            android:textColor="@color/sara_gray"
+                            android:textSize="@dimen/text_content_small_size" />
+                    </LinearLayout>
+                </LinearLayout>
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
