--- a/android/Sara/app/src/main/res/navigation/nav_graph_main.xml
+++ b/android/Sara/app/src/main/res/navigation/nav_graph_main.xml
@@ -98,8 +98,7 @@
         <argument
             android:name="gallery"
             app:argType="com.xten.sara.data.Gallery"
-            app:nullable="true"
-            android:defaultValue="@null" />
+            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/myGalleryFragment"
