[MY] UI점검 및 디버깅 완료
onCreateView()부터 실행되는 문제는.. 디테일프래그먼트가 아니라 액티비티로 바꾸면 해결되는 문제일듯..

--- a/android/Sara/app/src/main/res/layout/fragment_my.xml
+++ b/android/Sara/app/src/main/res/layout/fragment_my.xml
@@ -98,7 +98,9 @@
                     android:onClick="@{()->fragent.setCollectionButtonAction(account.email)}"
                     android:text="@string/text_menu_collection"
                     android:textAlignment="viewStart"
-                    android:textSize="@dimen/text_button_medium_size" />
+                    android:textSize="@dimen/text_button_medium_size"
+                    app:icon="@drawable/ic_store"
+                    app:iconTint="@color/black" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
