--- a/android/Sara/app/src/main/res/layout/fragment_my_gallery.xml
+++ b/android/Sara/app/src/main/res/layout/fragment_my_gallery.xml
@@ -1,21 +1,140 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
+        <variable
+            name="viewModel"
+            type="com.xten.sara.ui.gallery.GalleryViewModel" />
     </data>
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.my.MyGalleryFragment">
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment" />
+            android:layout_height="@dimen/top_bar_height"
+            android:background="@color/white"
+            android:orientation="horizontal">
 
-    </FrameLayout>
+            <ImageView
+                android:id="@+id/btn_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="@dimen/default_margin"
+                android:src="@drawable/ic_arrow" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="@dimen/gap_margin"
+                android:layout_marginEnd="@dimen/default_margin"
+                android:elevation="@dimen/top_elevation"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:text="@string/text_menu_collection"
+                android:textSize="@dimen/text_top_title_size"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/basic_button_height"
+            android:layout_marginStart="@dimen/default_margin"
+            android:layout_marginEnd="@dimen/default_margin"
+            app:boxBackgroundColor="@color/sara_lightGray"
+            app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
+            app:boxCornerRadiusBottomStart="@dimen/corner_radius"
+            app:boxCornerRadiusTopEnd="@dimen/corner_radius"
+            app:boxCornerRadiusTopStart="@dimen/corner_radius"
+            app:boxStrokeColor="@color/sara_lightGray"
+            app:boxStrokeWidth="0dp"
+            app:endIconMode="clear_text"
+            app:errorEnabled="false"
+            app:hintEnabled="false">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edit_search"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:drawableLeft="@drawable/ic_search"
+                android:drawablePadding="@dimen/gap_margin"
+                android:hint="@string/text_search_hint"
+                android:imeOptions="actionSearch"
+                android:paddingLeft="0dp"
+                android:paddingTop="0dp"
+                android:paddingEnd="@dimen/default_margin"
+                android:paddingRight="0dp"
+                android:paddingBottom="0dp"
+                android:singleLine="true"
+                android:text="@={viewModel.input}"
+                android:textColor="@color/black" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/default_margin"
+            android:orientation="horizontal">
+
+            <RadioGroup
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="@dimen/default_margin"
+                android:orientation="horizontal">
+
+                <RadioButton
+                    android:id="@+id/btn_album"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:button="@drawable/ic_type_gallery"
+                    android:buttonTint="@color/chip_bg_color"
+                    android:checked="true"
+                    android:minWidth="0dp" />
+
+                <RadioButton
+                    android:id="@+id/btn_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/gap_margin"
+                    android:button="@drawable/ic_type_list"
+                    android:buttonTint="@color/chip_bg_color"
+                    android:minWidth="0dp" />
+
+            </RadioGroup>
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <ImageView
+                android:id="@+id/btn_reset"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginEnd="@dimen/default_margin"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:padding="2dp"
+                android:tint="@color/sara_gray"
+                app:srcCompat="@drawable/ic_recall" />
+
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/gap_minus_margin"
+            android:layout_marginTop="@dimen/default_margin"
+            android:layout_marginEnd="@dimen/gap_minus_margin" />
+
+    </LinearLayout>
 </layout>
